// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup renders a RadioGroup 1`] = `
<div
  className="MuiFormControl-root"
>
  <div
    className="MuiFormGroup-root"
    role="radiogroup"
  />
</div>
`;

exports[`RadioGroup renders a RadioGroup with a warning when touched 1`] = `
<div
  className="MuiFormControl-root"
>
  <div
    className="MuiFormGroup-root"
    role="radiogroup"
  />
  <p
    className="MuiFormHelperText-root"
  >
    FooWarning
  </p>
</div>
`;

exports[`RadioGroup renders a RadioGroup with an error when touched 1`] = `
<div
  className="MuiFormControl-root"
>
  <div
    className="MuiFormGroup-root"
    role="radiogroup"
  />
  <p
    className="MuiFormHelperText-root Mui-error"
  >
    FooError
  </p>
</div>
`;

exports[`RadioGroup renders a RadioGroup with error when touched and helper text 1`] = `
<div
  className="MuiFormControl-root"
>
  <div
    className="MuiFormGroup-root"
    role="radiogroup"
  />
  <p
    className="MuiFormHelperText-root Mui-error"
  >
    FooError
  </p>
</div>
`;

exports[`RadioGroup renders a RadioGroup with helper text when not touched 1`] = `
<div
  className="MuiFormControl-root"
>
  <div
    className="MuiFormGroup-root"
    role="radiogroup"
  />
  <p
    className="MuiFormHelperText-root"
  >
    My Helper Text
  </p>
</div>
`;

exports[`RadioGroup renders a RadioGroup with no error when not touched 1`] = `
<div
  className="MuiFormControl-root"
>
  <div
    className="MuiFormGroup-root"
    role="radiogroup"
  />
</div>
`;

exports[`RadioGroup renders a RadioGroup with no warning when not touched 1`] = `
<div
  className="MuiFormControl-root"
>
  <div
    className="MuiFormGroup-root"
    role="radiogroup"
  />
</div>
`;

exports[`RadioGroup should ignore defaultValue 1`] = `
<div
  className="MuiFormControl-root"
>
  <div
    className="MuiFormGroup-root"
    role="radiogroup"
  />
  <p
    className="MuiFormHelperText-root"
  >
    FooWarning
  </p>
</div>
`;
